# Password_manager

./: .gitignore  Cargo.toml  README.md  Todo  key  test.json
src/: Encryption.rs  main.rs  multi_factor_authentication.rs
src/CredintailHandler/: creds.rs  mod.rs
