[package]
name = "password_manager"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
aes = "0.7"      # AES implementation
block-modes = "0.8"  # Block cipher modes like CBC
block-padding = "0.2"  # Padding (PKCS7)
hex = "0.4"      # For converting binary data to hexadecimal
rand = "0.8"     # For generating random IVs
lettre = "0.10"  # For sending emails
dotenv = "0.15"
